Fix text overflow for chat button

--- a/labs/meteor-client/app/client/stylesheets/landscape/chat.less
+++ b/labs/meteor-client/app/client/stylesheets/landscape/chat.less
@@ -12,6 +12,7 @@
 
   #sendMessageButton {
     height: 40px;
+    padding: 0px;
   }
 
   #tabsList {
